tests/__snapshots__/config-failFast---failFast-isString-stderr.snap.txt
Error: The source type is 'string'.

  1 | import { expect, test } from "tstyche";
  2 | test("is string?", () => {
> 3 |   expect<string>().type.not.toBeString();
    |                             ^
  4 |   expect<string>().type.not.toBeString();
  5 | });
  6 | 

      at ./__typetests__/isString.tst.ts:3:29 ❭ is string?

